; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_swap.c_state_to_kill_operation.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_swap.c_state_to_kill_operation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWAP_DEACTIVATING_SIGTERM = common dso_local global i64 0, align 8
@JOB_RESTART = common dso_local global i32 0, align 4
@KILL_RESTART = common dso_local global i32 0, align 4
@KILL_TERMINATE = common dso_local global i32 0, align 4
@KILL_KILL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @state_to_kill_operation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @state_to_kill_operation(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @SWAP_DEACTIVATING_SIGTERM, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @UNIT(i32* %10)
  %12 = load i32, i32* @JOB_RESTART, align 4
  %13 = call i64 @unit_has_job_type(i32 %11, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %9
  %16 = load i32, i32* @KILL_RESTART, align 4
  store i32 %16, i32* %3, align 4
  br label %21

17:                                               ; preds = %9
  %18 = load i32, i32* @KILL_TERMINATE, align 4
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @KILL_KILL, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %17, %15
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @unit_has_job_type(i32, i32) #1

declare dso_local i32 @UNIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
